Fix image on safari

--- a/app/public/styles/styles.css
+++ b/app/public/styles/styles.css
@@ -31,6 +31,9 @@ body {
 
 #login-card img {
   max-width: 96px;
+  max-height: 96px;
+  width: 96px;
+  height: 96px;
 }
 
 #login-card #logo {
